background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,9 @@ body {
   background-image: url("../resources/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vw, calc(100% + 100px);
+  background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
-  background-position: fixed;
+  background-position: center;
 }
 
 .navbar {
